added DataTypes.Result methods, added Hash for LinkTuple